Fixed bar spacing

--- a/src/styles/less/include/main.less
+++ b/src/styles/less/include/main.less
@@ -99,8 +99,9 @@ section.bars {
 	padding-top: 52px;
 
 	.bar-label {
+		display: inline-block;
 		font-weight: bold;
-		padding: 3px 0 0;
+		padding: 5px 0 0;
 	}
 
 	.bar-value {
